# python-fastembed

./: .gitignore  01-basic.ipynb  Makefile  pyproject.toml
results/BAAI/bge-small-en/: Banking77Classification.json
results/sentence-transformers/all-MiniLM-L6-v2/: Banking77Classification.json
